get-started-with-istio-3-steps/03 - traffic-split/greeter-app-dr-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: greeter-app
spec:
  host: greeter-app.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2  
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
