get-started-with-istio-3-steps/03 - traffic-split/greeter-app-vs-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeter-app
spec:
  hosts:
  - greeter-app.default.svc.cluster.local
  http:
  - name: default
    route:
    - destination:
        host: greeter-app.default.svc.cluster.local
        subset: v1
      weight: 50
    - destination:
        host: greeter-app.default.svc.cluster.local
        subset: v2
      weight: 50
